<resources>
    <string name="app_name">ISI SCHOOL</string>
    <string name="myTitle">CONNEXION</string>
    <string name="app_coonect">CONNECT</string>
    <string name="app_signin">SIGN IN</string>
    <string name="prompt_username">Login</string>
    <string name="prompt_password">Mot de Pass</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="presentation">Presentation</string>
    <string name="formation">Formation</string>
    <string name="university">University</string>
    <string name="marks">Marks</string>
    <string name="helps">Helps</string>
    <string name="cancel">Cancels</string>
    <string name="inscription">Inscription</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="degrees">Degrees</string>
    <string name="o_level">O Level</string>
    <string name="bachelor">Bachelor</string>
    <string name="master">master</string>
    <string name="save">save</string>
    <string name="error_fields">Required Fields</string>
    <string name="error_connetion">Connection Error</string>
    <string name="error_parameters">Parameters Error</string>
    <string name="welcome">Welcome Error</string>
    <string name="wait">Please Wait Error</string>
    <string name="success_register">Registered Successfully</string>
    <string name="error_register">Registration Error</string>
    <string name="logout">logout</string>
    <string name="email">Email: isi.sn Tel: 33 888 88 88</string>
    <string name="myText">DEVELOPPEMENT D\'APPLICATION MOBILE(cours de rattrapage)
DITI 5
Flux
Travaux et devoirs
Participants
DEVELOPPEMENT D\'APPLICATION MOBILE(cours de rattrapage)
DITI 5
Lien Meet
https://meet.google.com/lookup/fmehdgpz3j
À venir
Génial, aucun devoir à remettre dans les jours qui viennent !
Tout afficher

Faire une annonce pour votre classe

Annonce : "Présentation ISI"
Assane SECK
Date de création : 20:4220:42
Présentation ISI

isi.txt
Texte


Annonce : "Logo"
Assane SECK
Date de création : 19:3619:36
Logo

logo.png
Image


Annonce : "https://meet.google.com/lookup/fmehdgpz…"
Thiam Mame Anta
Date de création : 15:5715:57
https://meet.google.com/lookup/fmehdgpz3j

DEVELOPPEMENT D\'APPLICATION MOBILE(cours de rattrapage) DITI 5
Situé au km1 avenue cheikh Anta Diop, l\'institut supérieur d\'informatique ISI, est sous la tutelle du Ministère de l\'Enseignement Supérieur privé qui est signataire de tous les diplomes délivrés, sous le controle de l\'ANAQ-Sup.
L\'ISI, contribue depuis plus de 27 ans a la formation des jeunes cadres africains.
Avec l\'ambition du PDG, de participer a la diversification de l\'offre de formation au Sénégal et dans la sous-région, l\'ISI a su se développer au fil des ans, comptant ainsi en son sein 09 campus, ou se cotoient plus de trente nationalités, qui constituent la belle famille isienne.
Le groupe dispose des experts de très haut niveau universitaire et spécialistes dans plusieurs domaines de l\'Informatique et de la gestion.
Grace a son expertise et la qualité de ses services, Le Groupe ISI délivre des diplomes de Licence et Master reconnus a la fois par le monde de l\'entreprise et par les instances d\'accréditation nationales « ANAQ SUP »et panafricaines « CAMES ».
Avec une offre de formation diversifiée dans les métiers d\'avenir, une innovation permanente de ses programmes, et les brillants résultats obtenus aux différents examens et concours, L\'Institut Supérieur d\'informatique  » ISI » est leader dans son domaine au Sénégal et dans la sous-région.
isi.txt
isi.txt est maintenant affiché.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_university">Map</string>

    <string name="label_users">Users</string>
    <string name="save_user">Save</string>
    <string name="delete_user">Delete</string>
    <string name="update_user">Update</string>
</resources>