<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InscriptionFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inscription"
        android:gravity="center"
        android:textSize="@dimen/dim_title"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/txtFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_top"
        android:hint="@string/first_name"/>
    <EditText
        android:id="@+id/txtLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_top"
        android:hint="@string/last_name"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/degrees"
        android:textSize="@dimen/dim_title"
        android:layout_marginTop="@dimen/dim_top"/>
    <CheckBox
        android:id="@+id/cbOLevel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dim_middle"
        android:text="@string/o_level"
        android:layout_marginTop="@dimen/dim_top"/>
    <CheckBox
        android:id="@+id/cbBachelor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dim_middle"
        android:text="@string/bachelor"
        android:layout_marginTop="@dimen/dim_top"/>
    <CheckBox
        android:id="@+id/cbMasterr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dim_middle"
        android:text="@string/master"
        android:layout_marginTop="@dimen/dim_top"/>
    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dim_all"
        android:text="@string/save"
        android:backgroundTint="@color/teal_200"/>

</LinearLayout>