<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="327dp"
        android:layout_height="134dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toTopOf="@+id/txtLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_isi"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/txtLogin"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50px"
        android:layout_marginLeft="50px"
        android:layout_marginEnd="50px"
        android:layout_marginRight="50px"
        android:ems="10"
        android:hint="@string/prompt_username"
        android:inputType="textPersonName"
        android:textSize="24sp"
        android:gravity="center|center_horizontal|center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50px"
        android:layout_marginLeft="50px"
        android:layout_marginEnd="50px"
        android:layout_marginRight="50px"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:textSize="24sp"
        android:gravity="center|center_horizontal|center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLogin" />

    <Button
        android:id="@+id/button5"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50px"
        android:layout_marginLeft="50px"
        android:layout_marginEnd="50px"
        android:layout_marginRight="50px"
        android:text="@string/app_coonect"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

    <Button
        android:id="@+id/button6"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50px"
        android:layout_marginLeft="50px"
        android:layout_marginEnd="50px"
        android:layout_marginRight="50px"
        android:text="@string/app_signin"
        android:textSize="24sp"
        app:backgroundTint="@color/teal_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />
</androidx.constraintlayout.widget.ConstraintLayout>